# rust-quant

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  GETTING_STARTED.md  README.md  aedan_resume.md  pyproject.toml
examples/: 01_basic_single_option.py  02_multiple_options_vectorized.py  03_performance_benchmark.py  04_dividend_yield_example.py  05_american_options_example.py  06_american_batch_pricing.py  07_zero_coupon_curve.py  08_monte_carlo_paths.py  README.md
marimo_examples/: 01_basic_single_option.py  02_multiple_options_vectorized.py  03_performance_benchmark.py  04_dividend_yield_example.py  05_american_options_example.py  06_american_batch_pricing.py  07_zero_coupon_curve.py  08_monte_carlo_paths.py  README.md
python/rust_quant/: __init__.py  _american.pyi  _european.pyi  _stochastic.pyi  _types.pyi  _yield_curve.pyi  rust_quant.pyi
src/: lib.rs  simd.rs  types.rs  vectorized.rs
src/american/: call.rs  mod.rs  option.rs  pricing.rs  put.rs
src/european/: call.rs  mod.rs  option.rs  put.rs
src/stochastic/: american_lsm.rs  brownian.rs  gbm.rs  heston.rs  mod.rs  monte_carlo.rs  rng.rs
src/zero_coupon/: curve.rs  forward_curve.rs  mod.rs
tests/: __init__.py  test_american_options.py  test_european_options.py  test_interpolation_methods.py  test_stochastic.py  test_zero_coupon_curve.py
