[package]
name = "rust_quant"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_quant"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
statrs = "0.17"
rayon = "1.10"
wide = "0.7"
rand = "0.8"
rand_xoshiro = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
